--- a/src/views/content/login.ejs
+++ b/src/views/content/login.ejs
@@ -1,24 +1,24 @@
-<div class="row justify-content-center">
-    <div class="col-md-6">
-      <h2 class="text-center mb-4">Login</h2>
-      <% if (query.error === 'invalid') { %>
-      <div class="alert alert-danger">
-        Usuário ou senha inválidos.
+  <div class="row justify-content-center">
+      <div class="col-md-6">
+        <h2 class="text-center mb-4">Login</h2>
+        <% if (query.error === 'invalid') { %>
+        <div class="alert alert-danger">
+          Usuário ou senha inválidos.
+        </div>
+        <% } %>
+        <form action="/login" method="POST">
+          <div class="mb-3">
+            <label for="email" class="form-label">Email</label>
+            <input type="text" class="form-control" id="email" name="email" required autocomplete="none">
+          </div>
+          <div class="mb-3">
+            <label for="senha" class="form-label">Senha</label>
+            <input type="password" class="form-control" id="senha" name="senha" required>
+          </div>
+          <button type="submit" class="btn btn-primary w-100">Entrar</button>
+          <div class="text-center mt-3">
+            <a href="/register">Criar conta</a>
+          </div>
+        </form>
       </div>
-      <% } %>
-      <form action="/login" method="POST">
-        <div class="mb-3">
-          <label for="email" class="form-label">Email</label>
-          <input type="text" class="form-control" id="email" name="email" required>
-        </div>
-        <div class="mb-3">
-          <label for="senha" class="form-label">Senha</label>
-          <input type="password" class="form-control" id="senha" name="senha" required>
-        </div>
-        <button type="submit" class="btn btn-primary w-100">Entrar</button>
-        <div class="text-center mt-3">
-          <a href="/register">Criar conta</a>
-        </div>
-      </form>
     </div>
-  </div>
