--- a/src/views/content/register.ejs
+++ b/src/views/content/register.ejs
@@ -9,15 +9,23 @@
                 <form action="/register" method="POST">
                     <div class="mb-3">
                         <label for="nome" class="form-label">Usuário</label>
-                        <input type="text" class="form-control" id="username" name="nome" required>
+                        <input type="text" class="form-control" id="username" name="nome" required autocomplete="none">
                     </div>
                     <div class="mb-3">
                         <label for="email" class="form-label">Email</label>
-                        <input type="email" class="form-control" id="email" name="email" required>
+                        <input type="email" class="form-control" id="email" name="email" required autocomplete="none">
                     </div>
                     <div class="mb-3">
                         <label for="senha" class="form-label">Senha</label>
                         <input type="password" class="form-control" id="senha" name="senha" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="senha" class="form-label">RM</label>
+                        <input type="text" class="form-control" id="rm" name="rm" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="senha" class="form-label">Codigo da Etec</label>
+                        <input type="text" class="form-control" id="codigoEtec" name="codigoEtec" required>
                     </div>
                     <button type="submit" class="btn btn-primary w-100">Registrar</button>
                     <div class="text-center mt-3">
